# genai-art

./: pyproject.toml
genai_art/: colors.py  image.py  transfomer_image.py  transformations.py
notebook/: exampleDistortingImages2.ipynb  exampleDistortingImages3.ipynb
